add and configure jacoco for code coverage